--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -50,7 +50,7 @@
 
 \usepackage{array, xcolor}
 \usepackage{color,hyperref}
-\definecolor{clemsonorange}{HTML}{EA6A20}
+\definecolor{clemsonorange}{HTML}{B3A369}
 \hypersetup{colorlinks,breaklinks,
             linkcolor=clemsonorange,urlcolor=clemsonorange,
             anchorcolor=clemsonorange,citecolor=black}
@@ -83,7 +83,7 @@ TA: TBD \\
 
 \section*{Course Description}
 
-In this class we will cover an introduction into statistical computing which is a cornerstone to economic research. The course will be about one half statistical concepts like counts, summary statistics, and the basics of building statistical models, and one half practical coding skills that are necessary for estimating these concepts. I assume that the incoming student has a general knowledge of mathematical principals, most importantly familiarity with manipulating algebraic equations as well as basic probability theory and intuition. I also assume that the student has a basic understanding of python and notebooks. Although each of these subjects will be taught from the ground up, if this is the first encounter with any of these concepts then I expect a pretty steep learning curve. 
+In this class we will cover an introduction into statistical computing which is a cornerstone to economic research. The course will be about one half statistical concepts [e.g. counts, summary statistics, and the basics of building statistical models], and one half practical coding skills that are necessary for estimating these concepts. I assume that the incoming student has a general knowledge of mathematical principals, most importantly familiarity with manipulating algebraic equations as well as basic probability theory and intuition. I also assume that the student has a basic understanding of python and notebooks. Although each of these subjects will be taught from the ground up, if this is the first encounter with any of these concepts then I expect a pretty steep learning curve. 
 
 
 \section*{Course Objectives}
@@ -114,9 +114,8 @@ http://www.honor.gatech.edu.
 \subsection*{Grading Policy}
 \begin{itemize}
 \item \underline{\textbf{40\%}} of your grade will be determined by your homework videos. There will be a total of 10 homework videos graded (see below) and I will drop the lowest two grades and average the others. 
-\item \underline{\textbf{20\%}} of your grade will be determined by the midterm grade. 
-\item \underline{\textbf{30\%}} of your grade will be determined by a final exam.
-\item \underline{\textbf{10\%}} of your grade will be determined by a final project.
+\item \underline{\textbf{25\%}} of your grade will be determined by the midterm grade. 
+\item \underline{\textbf{35\%}} of your grade will be determined by a final exam.
 \item \underline{\textbf{5\%}} extra credit (see below). 
 \end{itemize}
 
@@ -131,9 +130,6 @@ Each week that we do not an exam (see schedule) you will have to submit a *no lo
 
 \subsubsection*{Exams}
 Midterm and final will be cumulative and cover statistical concepts and test the ability to read output of statistical code and explain the outputs in well formulated arguments that address central tendency and dispersion.
-
-\subsubsection*{Final Project}
-Your final project will be a slightly larger version of your homework. You will each be assigned a dataset that you will need to present summary statistics on, and a brief statistical analysis. Again, a short video to present will be created with a limit of up to 5 minutes for the presentation. The grading rubric will be the same as homework. You final project should exhibit knowledge of central tendency, dispersion, and most importantly telling a story (even if that story is we cannot find any interesting results). 
 
 
 \subsubsection*{Extra Credit}
@@ -155,6 +151,15 @@ Also, if you will be missing any classes for religious holidays or other events,
 as you know you will be missing class. You will still be required to know the material from that
 class period.
 
+\subsection*{Policy on Children in Class (adopted from \@guygrossman)}
+
+\begin{enumerate}
+\item You and your baby are welcome in class anytime.
+\item For older children and babies, I understand that minor illnesses and unforeseen disruptions in childcare often put parents in the position of having to choose between missing class to stay home with a child and leaving them with someone you or the child does not feel comfortable with. While this is not meant to be a long-term childcare solution, occasionally bringing a child to class in order to cover gaps in care is perfectly acceptable.
+\item I ask that all students work with me to create a welcoming environment that is respectful of all forms of diversity, including diversity in parenting status.
+\item In all cases where babies and children come to class, I ask that you sit close to the door so that if your little one needs special attention and is disrupting learning for other students, you may step outside until their need has been met. Non-parents in the class, please reserve seats near the door for your parenting classmates.
+\item Finally, I understand that often the largest barrier to completing your coursework once you become a parent is the tiredness many parents feel in the evening once children have finally gone to sleep. The struggles of balancing school and childcare are exhausting! I hope that you will feel comfortable disclosing your student-parent status to me. This is the first step in me being able to accommodate any special needs that arise. While I maintain the same high expectations for all students in my classes regardless of parenting status, I am happy to problem solve with you in a way that makes you feel supported as you strive for school-parenting balance. 
+\end{enumerate}
 
 \subsection*{Schedule (subject to change)}
 \SetDate[22/08/2022]
@@ -165,8 +170,8 @@ class period.
 \week{Week 05} Probability review 2: Conditional Probability.
 \week{Week 06} Summation notation. 
 \week{Week 07} Correlation and model introduction. 
-\week{Week 08} Review and Midterm: conditional prob to correlation
-\week{Week 09} Average Treatment Effect
+\week{Week 08} Review and Midterm: conditional prob to correlation.
+\week{Week 09} Average Treatment Effect.
 \week{Week 10} Linear regression. 
 \week{Week 11} Linear regression 2. 
 \week{Week 12} Standard error. 
