--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -171,7 +171,7 @@ Homeworks are due on Thursday morning at 10AM EST. Submit the video (youtube lin
 \textbf{*** Because I am dropping your two lowest, I am not accepting late homework. Homework submitted at 10:01AM will not be accepted. ***}
 
 
-Each week that we do not have an exam (see schedule) you will have to submit a *no longer than* 2 minute video of your notebook assignment for that week, along with the notebook. You are welcome to work with others on the homework assignment, but your video and your code/notebook will need to be your own. The videos will reviewed by the TA and given an 0-100\% grade. This is homework so my intention here is that a good shot at the work, and admitting what you can't get should be a 100\%. The general idea here is to help you build your voice of your analysis. The grading rubric for the assignment are:
+Each week that we do not have an exam (see schedule) you will have to submit a *no longer than* 2 minute video of your notebook assignment for that week, along with the notebook. You are welcome to work with others on the homework assignment, but your video and your code/notebook will need to be your own. The videos will reviewed by the TA and given an 0-100\% grade, although final grades for the assignments will be determined by me and your talk to me if you have any issues. As always, respect and kindness are expected in all communications. This is homework so my intention here is that a good shot at the work, and admitting what you can't get should be a 100\%. The general idea here is to help you build your voice of your analysis. The grading rubric for the assignment are:
   \begin{itemize}
 \item \underline{\textbf{50\%}} does the notebook achieve the directions, or at least make a solid stab at and explain what they couldn't get in their video.  
 	\item \underline{\textbf{40\%}} does the video express the ideas of the analysis in a straightforward that explains what the author believes and how confident they are in the results. Just screen cast the notebook and explain what you did, and even what you didn't understand. 
@@ -179,6 +179,10 @@ Each week that we do not have an exam (see schedule) you will have to submit a *
 \end{itemize}
 
 Our repo will have suggestions on how to record, but you will not be reviewed on production quality, just the results. 
+
+The point of these exercises is to get better at stats and coding, please do not attempt to just present someone's else work. It will show through in your presentations, and worst case you will not receive credit for the homework. 
+
+
 
 \subsubsection*{Homework Videos}
 
