more practive questions

--- a/exams/practice midterm/practice1_wk1_wk8.tex
+++ b/exams/practice midterm/practice1_wk1_wk8.tex
@@ -263,4 +263,122 @@ In a factory, machine X produces 60$\%$ of the daily output and machine Y produc
 One day, an item was inspected at random and found to be defective. What is the probability that it was produced by machine X?
 
 
+\subsection{Correlation}
+
+
+What is the upper and lower bounds of correlation? 
+\newline  
+\newline
+\newline 
+
+If we are take the row wise deviations of x and y, explain in words how the algorithm enforces these bounds? 
+\newline  
+\newline
+\newline 
+
+
+Explain in words what a correlation of 0.8 means? 
+\newline  
+\newline
+\newline 
+
+
+Explain in words what a correlation of -0.8 means? 
+\newline  
+\newline
+\newline 
+
+
+
+
+Explain in words what a correlation of -0.08 means? 
+\newline  
+\newline
+\newline 
+
+
+
+Explain in words what a correlation of 0.08 means? 
+\newline  
+\newline
+\newline 
+
+
+We often say that "correlation is not causation",  briefly explain what that means (breifly = a few sentences)? 
+\newline  
+\newline
+\newline 
+
+\newpage
+
+Use the data below the following questions. 
+
+\begin{center}
+\begin{tabular}{ |c|c|} 
+ \hline
+ y & x  \\ 
+ \hline
+ 5 & 3  \\ 
+ 3 & 8  \\ 
+ 7 & 1  \\ 
+ 1 & 4  \\ 
+ \hline
+\end{tabular}
+\end{center}
+
+What is the mean of y and x? 
+\newline  
+\newline
+\newline 
+
+Create a grid below and demean x and y, and then square those columns. 
+\newline  
+\newline
+\newline 
+\newline  
+\newline
+\newline 
+\newline  
+\newline
+\newline 
+
+Sum the squares of those two columns (deamned x sauared, and demeaned y squared), and show the square root (no need to calculate) of each multiplied by each other. 
+\newline 
+\newline  
+\newline
+\newline 
+
+
+In your grid create new column and calculate $ (x_i - \bar{x})(y_i - \bar{y})$ where $\bar{x}$ is the mean and $\bar{y}$ is the mean of y  . Note that this will n long. 
+\newline 
+\newline  
+\newline
+\newline 
+
+Now sum up the numerator. 
+\newline 
+\newline  
+\newline
+\newline 
+
+If the you were able to calculate the numerator and denomenator and the correlation came out to -0.61394061, what would be the interpretation? 
+\newline 
+\newline  
+\newline
+\newline 
+
+
+Draw an y axis and an x axis and plot the points. Does the correlation make sense. 
+\newline 
+\newline  
+\newline
+\newline 
+\newline 
+\newline  
+\newline
+\newline 
+
+
+
+
 \end{document}
